crates/tui/snapshots/fullscreen/state/removed_dictate_before_session_fullscreen.snap
---
source: crates/tui/src/app/state_tests.rs
expression: frame
---
  .                                                                [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                    Unknown command: /dictate.  
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual · ← Dashboard · ? for shortcuts
