crates/tui/snapshots/fullscreen/state/xai_subscription_auto_models.snap
---
source: crates/tui/src/app/state_tests.rs
expression: updated
---
  .                                                                                [Dashboard]

            ┌── Config › Super Grok ───────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Account  ·  ada@example.test                                        │
            │  Plan  ·  SuperGrok Heavy                                            │
            │                                                                      │
            │  Models ──────────────────────────────────────────────────────────── │
            │  Grok Next                                                           │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────└──────────────────────────────────────────────────────────────────────┘──────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────── Automatic model

  Esc to return  ·  l to sign out
