crates/tui/snapshots/fullscreen/state/xai_subscription_device_login.snap
---
source: crates/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                                [Dashboard]

            ┌── Config › Super Grok ───────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Browser opened  ·  https://auth.x.ai/device                         │
            │  Enter code  ·  XAI-1234                                             │
            │  Cancel sign-in                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────└──────────────────────────────────────────────────────────────────────┘──────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────── Automatic model

  Esc to return
