crates/tui/snapshots/fullscreen/state/xai_subscription_plan.snap
---
source: crates/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                                [Dashboard]

            ┌── Config › Super Grok ───────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Account  ·  ada@example.test                                        │
            │  Plan  ·  SuperGrok Heavy                                            │
            │                                                                      │
            │  Models ──────────────────────────────────────────────────────────── │
            │  Grok Account Model                                                  │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────└──────────────────────────────────────────────────────────────────────┘──────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────── Automatic model

  Esc to return  ·  l to sign out
