crates/tui/snapshots/fullscreen/state/zai_subscription_configured.snap
---
source: crates/tui/src/app/state_tests.rs
expression: screen
---
  .                                                                                [Dashboard]

            ┌── Config › Z.AI ─────────────────────────────────────────────────[✗]─┐
            │                                                                      │
            │> Account  ·  person@example.test                                     │
            │                                                                      │
            │  Models ──────────────────────────────────────────────────────────── │
            │  No models available                                                 │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
            │                                                                      │
  ──────────└──────────────────────────────────────────────────────────────────────┘──────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────── Automatic model

  Esc to return  ·  l to sign out
